--- a/Views/AnaSayfa/Blog.html
+++ b/Views/AnaSayfa/Blog.html
@@ -8,25 +8,25 @@
     <title>AHMET YASİN PEKDEMİR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="stiller/main.css">
+    <link rel="stylesheet" href="../../stiller/main.css">
 </head>
 
 <body>
     <!-- HEADER -->
      <header class="header" id="header">
          <a href="#">
-            <img src="resimler/Logo2.png" alt="Ana Ekran" height="100" id="Logo">
+            <img src="../../resimler/Logo2.png" alt="Ana Ekran" height="100" id="Logo">
         </a>
         <nav class="navbar" id="menu">
             <a href="#" class="active">Hakkımda</a>
-            <a href="./iletisim.html">İletişim</a>
+            <a href="iletisim.html">İletişim</a>
         </nav>
         <div class="buttons">
-            <a href="./hesap.html">
-                <img src="resimler/hesap.svg" alt="hesap" height="30">
+            <a href="../Kayit/hesap.html">
+                <img src="../..resimler/hesap.svg" alt="hesap" height="30">
             </a>
             <a href="#" class="menu-button" onclick="menuButonu()">
-                <img src="resimler/bar.svg" alt="bar" height="30">
+                <img src="../..resimler/bar.svg" alt="bar" height="30">
             </a>
         </div>
     </header>
