UI ve Form değişiklikleri

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,21 +10,25 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
 
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
 </head>
 <body>
    
     <!-- HEADER -->
     <header class="header" id="header">
-        <a href="#">
+        <a href="#" >
             <img src="~/images/Logo2.png" alt="Ana Ekran" height="100" id="Logo">
         </a>
         <nav class="navbar" id="menu">
-            <a href="/Home/Index" class="active">Hakkımda</a>
-            <a href="/Home/Iletisim">İletişim</a>
+            <a href="/Home/Index" class="@(ViewContext.RouteData.Values["action"].ToString() == "Index" ? "active" : "")"  id="anasayfa">Ana Sayfa</a>
+            <a href="/Home/Iletisim" class="@(ViewContext.RouteData.Values["action"].ToString() == "Iletisim" ? "active" : "")"  id="iletisim">İletişim</a>
         </nav>
         <div class="buttons">
             <a href="/Hesap/Index">
-                <img src="~/images/hesap.svg" alt="hesap" height="30">
+                <img src="~/images/hesap.svg" alt="hesap" width="100" height="30">
             </a>
             <a href="#" class="menu-button" onclick="menuButonu()">
                 <img src="~/images/bar.svg" alt="bar" height="30">
@@ -32,8 +36,9 @@
         </div>
     </header>
     <!-- HEADER SON -->
-
-
+   <!-- Header Script-->
+    
+    <!-- Header script son-->
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -43,19 +48,17 @@
 
 
     <!-- FOOTER START -->
+
+    <!-- Footer olmasa mı acaba
     <footer class="container-fluid d-flex justify-content-center align-items-center">
         <div class="col-lg-6 offset-lg-5" style="color: black;"> Made by The Man Himself!</div>
         <div class="col-lg-1">
             <a href="/Home/Iletisim">İletişim</a>
         </div>
     </footer>
+    -->
     <!-- FOOTER END -->
 
-
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
