--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="left-block mb-12">
+    <form>
+        <h6 class="color-sec mb-24">Randevu Alın</h6>
+        <div class="input-field col-lg-4">
+            <input type="text" placeholder="Ahmet Pekdemir">
+        </div>
+        <div class="input-field col-lg-4">
+            <input type="email" placeholder="Email">
+        </div>
+        <div class="input-field col-lg-4">
+            <input type="text" placeholder="Telefon No">
+        </div>
+        <div class="input-field col-lg-4">
+            <input type="text" class="form-control timepicker" placeholder="10:00PM" readonly="">
+        </div>
+        <a href="Iletisim" class="cus-btn w-100 medium-black">
+            <span class="btn-text">
+                Randevu Al
+            </span>
+        </a>
+    </form>
 </div>
