Ana Sayfa düzenleme

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,11 +36,9 @@
         </div>
     </header>
     <!-- HEADER SON -->
-   <!-- Header Script-->
-    
-    <!-- Header script son-->
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <div class="container-fluid p-0">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
