--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,25 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="left-block mb-12">
-    <form>
-        <h6 class="color-sec mb-24">Randevu Alın</h6>
-        <div class="input-field col-lg-4">
-            <input type="text" placeholder="Ahmet Pekdemir">
-        </div>
-        <div class="input-field col-lg-4">
-            <input type="email" placeholder="Email">
-        </div>
-        <div class="input-field col-lg-4">
-            <input type="text" placeholder="Telefon No">
-        </div>
-        <div class="input-field col-lg-4">
-            <input type="text" class="form-control timepicker" placeholder="10:00PM" readonly="">
-        </div>
-        <a href="Iletisim" class="cus-btn w-100 medium-black">
-            <span class="btn-text">
-                Randevu Al
-            </span>
-        </a>
-    </form>
-</div>
+
+
+<h2> DENEME </h2>
+<section class="Kadin-Erkek-Sec" >
+    <div class="salon-resim sol">
+        <img src="~/images/KadinSalon.jpg" alt="KadinSalonSecim" class="img-fluid">
+    </div>
+    <div class="salon-resim sag">
+        <img src="~/images/ErkekSalon.png" alt="ErkekSalonSecim" class="img-fluid">
+    </div>
+</section>
