--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,17 +4,21 @@
 
 
 
-<h1> LOREM IPSUM </h1>
-<h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+<h1> Güzelliğinize Güzellik Katın </h1>
+<h3> İstanbul'un kalbinde, profesyonel ekibimizle sizlere en iyi hizmeti sunmaktan gurur duyuyoruz. 20 yılı aşkın tecrübemiz ve modern tekniklerimizle, hayalinizdeki saçlara kavuşmanız için buradayız.</h3>
+
+
 <section class="Kadin-Erkek-Sec" >
     <div class="salon-resim sol">
-        <a href="/Randevu/Salonlar?salonTur=Kadın">
-        <img src="~/images/KadinSalon.jpg" alt="KadinSalonSecim" class="img-fluid">
+        <a href="/Randevu/Salonlar?salonTur=Kadın" class="image-container">
+            <img src="~/images/KadinSalon.jpg" alt="KadinSalonSecim" class="img-fluid">
+            <div class="overlay-text">Kadın Kuaförü</div>
         </a>
     </div>
     <div class="salon-resim sag">
-        <a href="/Randevu/Salonlar?salonTur=Erkek">
-        <img src="~/images/ErkekSalon.png" alt="ErkekSalonSecim" class="img-fluid">
+        <a href="/Randevu/Salonlar?salonTur=Erkek" class="image-container">
+            <img src="~/images/ErkekSalon.png" alt="ErkekSalonSecim" class="img-fluid">
+            <div class="overlay-text">Erkek Kuaförü</div>
         </a>
     </div>
 </section>
