--- a/Views/Randevu/Salonlar.cshtml
+++ b/Views/Randevu/Salonlar.cshtml
@@ -1,17 +1,28 @@
-﻿
+﻿@model List<WebApplication1.Models.Salon>
 
-@model List< WebApplication1.Models.Salon >
+<link rel="stylesheet" href="~/css/salonlar.css" />
 
 <h1>@(ViewBag.salonTur == "Kadın" ? "Kadın Salonlar" : "Erkek Salonlar")</h1>
 
-<div class="salons">
-    @foreach (var Salon in Model)
+<div class="salons-grid">
+    @foreach (var salon in Model)
     {
-        <div class="salon">
-            <h2>Salon: @Salon.ad</h2>
-            <p>Tür: @Salon.tur</p>
-            <p>Açılış Saati: @Salon.acilis_saati</p>
-            <p>Kapanış Saati: @Salon.kapanis_saati</p>
+        <div class="salon-card" onclick="showSalonDetails(@salon.id)">
+            <h2>@salon.ad</h2>
+            <p><i class="fas fa-clock"></i> @salon.acilis_saati - @salon.kapanis_saati</p>
+            <p><i class="fas fa-cut"></i> @salon.tur</p>
         </div>
     }
 </div>
+
+<!-- Salon hizmetleri modalı -->
+<div id="salonModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="salonBilgileri"></div>
+    </div>
+</div>
+
+@section Scripts {
+    <script src="~/js/salonlar.js"></script>
+}
