--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -44,6 +44,18 @@ body {
     padding: 20px;
 }
 
+.overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+
 
 /*-----   HEADER   ----- */
 .header {
